# OGC-Service-Profile-Creation

./: .gitignore  CHANGELOG.md  LICENSE  README.md  RELEASE_NOTES_2.0.0.md  RELEASE_NOTES_2.0.1.md  mkdocs.yml  my_profile.yaml  profile.schema.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-docs.yml
docs/: GENERATOR_GUIDE.md  PROFILE_CREATION_GUIDE.md  QUICK_REFERENCE.md  README.md  SUBSCRIPTION_UI_IMPLEMENTATION.md  TESTING.md  api-reference.md  examples.md  index.md
examples/: minimal_profile.yaml  nws_connect_profile.yaml  nwsviz_profile.yaml
my_profile/: document.asciidoc.log.txt  document.err.html  document.presentation.xml  openapi.yaml  profile_config.json
my_profile/abstract_tests/: ATS_class_core.adoc
my_profile/abstract_tests/core/: ATS_conformance.adoc  ATS_process-zarr-difference.adoc
my_profile/relaton/cache/ogc/: 19-086r6.xml
my_profile/requirements/: requirements_class_core.adoc
my_profile/requirements/core/: REQ_conformance.adoc  REQ_position-coveragejson.adoc  REQ_process-zarr-difference-streaming.adoc
my_profile/sections/: 02-scope.adoc  03-conformance.adoc  05-terms.adoc  06-requirements.adoc
src/: create_profile.py  query_types.py  templates.py
src/oapi_profile_builder/: cite_features.py  cli.py  compile.py  generate.py  server_validation.py
src/ogc_edr_profile/: __init__.py  cite.py  cli.py  generate.py  models.py
src/ogc_edr_profile.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tmp/my_profile/: document.adoc  openapi.yaml
tmp/my_profile/abstract_tests/core/: ATS_collections-endpoint.adoc  ATS_items-zarr-endpoint.adoc  ATS_position-coveragejson.adoc  ATS_process-zarr-difference-streaming.adoc  ATS_process-zarr-wind-streaming.adoc
tmp/my_profile/requirements/core/: REQ_collections-endpoint.adoc  REQ_items-zarr-endpoint.adoc  REQ_process-zarr-difference.adoc  REQ_process-zarr-wind-streaming.adoc
tmp/my_profile/sections/: 00-abstract.adoc  01-preface.adoc  04-references.adoc  07-abstract-tests.adoc
